[metadata]
name = jetsetgo
version = 0.0.1
author = Praketa S
description = Minimal JetSetGo CLI
long_description = file: README.md
long_description_content_type = text/markdown
license = Unlicense
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Unlicense

[options]
packages = find:
python_requires = >=3.12

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    jetsetgo = jetsetgo.app:main
